# ChangeLog for sys-apps/calculate-client
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-client-2.2.26 (16 Nov 2011)

  16 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.26.ebuild:
  Version bump

*calculate-client-2.2.25 (18 Oct 2011)

  18 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.2.24.ebuild, +calculate-client-2.2.25.ebuild:
  Version bump. Remove old.

  11 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-2.2.9999.ebuild:
  Update live

*calculate-client-2.2.24-r1 (21 Sep 2011)

  21 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.24-r1.ebuild, +files/calculate-client-2.2.24-r1.patch:
  Update for bugfix

  21 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.2.18.ebuild, -calculate-client-2.2.19.ebuild,
  -calculate-client-2.2.20.ebuild, -calculate-client-2.2.21.ebuild,
  -calculate-client-2.2.22.ebuild, -calculate-client-2.2.23.ebuild,
  -calculate-client-2.2.23-r1.ebuild, -calculate-client-2.2.23-r2.ebuild,
  -files/calculate-client-2.2.23-r1.patch,
  -files/calculate-client-2.2.23-r2.patch:
  Remove old

*calculate-client-2.2.24 (20 Sep 2011)

  20 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.24.ebuild:
  Version bump

*calculate-client-2.2.23-r2 (08 Sep 2011)

  08 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.23-r2.ebuild, +files/calculate-client-2.2.23-r2.patch:
  Update for feature

*calculate-client-2.2.23-r1 (06 Sep 2011)

  06 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.23-r1.ebuild, +files/calculate-client-2.2.23-r1.patch:
  Update for fix translate

*calculate-client-2.2.23 (05 Sep 2011)

  05 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.23.ebuild:
  Version bump

*calculate-client-2.2.22 (26 Aug 2011)
