@@ -4,7 +4,8 @@ DIST calculate-client-2.2.25.tar.bz2 31601 RMD160 378303fdcc5df494ca29a076db6dcc
 DIST calculate-client-2.2.26.tar.bz2 31619 RMD160 57e2f77f63b3213312ac4e01fe554a7a926c47f6 SHA1 c864f2f47101822f8923f38257e10d2bd6925d9e SHA256 78255deae6e249c757d3cd38a6755930a8da9d962a58952f7600b5dc712b0f24
 EBUILD calculate-client-2.2.24-r1.ebuild 985 RMD160 cf52e58cc2540c7492936811ae3787cd39812b9b SHA1 204cc72c589768f5607bb8232f257fff9b9e5a05 SHA256 42965241ee3fccd34c51d732410286d8d1de024bf965e1580ddded5a94eb76b0
 EBUILD calculate-client-2.2.25.ebuild 857 RMD160 db1af9871573bedbc8d5d0cf3d9810e6044f8dc4 SHA1 c61ec99243e2e2b0c3244b90500174744d9c372b SHA256 2519eef49072797fdb255a5b3f9747e0de07e907413647cb7882395289a3ed75
+EBUILD calculate-client-2.2.26-r1.ebuild 872 RMD160 c2a7f493f149106e40e61ea16058d687f5b23c71 SHA1 a8271dd207e8905d5a6a4d218196be345d8ed42d SHA256 38b26606dea8fdbc6d7cd770623d4f4a9562d1eadeb57c83278b67cb2152ec2c
 EBUILD calculate-client-2.2.26.ebuild 857 RMD160 a9079c40dc66788abe5021814602833e53b669e1 SHA1 bbb8fdd647130da5e0cce4b4889d06219fd639db SHA256 18565e43747fd67bced8541dc24b7c0cfe87d789425ee95280af106186fdb0ad
-EBUILD calculate-client-2.2.9999.ebuild 791 RMD160 73e0f75a7b40f92980e59fdffe83f7264e8f31e2 SHA1 51ae8009e155004e2a08372514368fba19839a5b SHA256 0e4dcd0d5ed00646bd90c30b9c13349a49dc6749e099e6f3e55c7118ed892f58
-MISC ChangeLog 20932 RMD160 090dc700d3658939b39adeee69b7d58156ce37f7 SHA1 9bd269468ce993defe4d33676927e6a0fa1ef077 SHA256 3403032b5775c43830c16857a6313df64367228ff1a571f2d76333a2cca7c70f
+EBUILD calculate-client-2.2.9999.ebuild 806 RMD160 686b9579327320e9e3c9cec36388a5dfedb9aca2 SHA1 f7335176cc3b91aac9255b43e5498fdb8c05a997 SHA256 55f34c6ab89b9f85fe969de4901e0f6c93ab9219d53e8c54eedfeecf49755bbb
+MISC ChangeLog 21122 RMD160 6bb8e93a47f73268e059fde01c194319d5da1d63 SHA1 b9289775ae4da697609305316b4bf62d426892dd SHA256 daac819f5086ebd9db6b4065b8b60bc5608dcc428474045fd9c32bba507f55c6
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
