@@ -17,6 +17,7 @@ EBUILD calculate-utilities-2.2.25-r8.ebuild 870 RMD160 3c830d60a5d3893bfe4422fb0
 EBUILD calculate-utilities-2.2.25-r9.ebuild 876 RMD160 a31f69938aac74b75f8e617fdd3a9920eb6a02ea SHA1 0d4248400fa2deda4172c8ee39238c7ac5569e77 SHA256 a1547b2bc720b28a6ff18c33a84368d4de20ed10a469f328cdfa740c2725ce15
 EBUILD calculate-utilities-2.2.25.ebuild 861 RMD160 e4d64358df7a0d26719652d509270b93f28c4124 SHA1 e3e923e41586a5631ee5ced45ad27ef95d0de78e SHA256 9b32bb8e5042d6cde0fa806b91d10bacf7cde4d9f5299e1f2a39a09ede539664
 EBUILD calculate-utilities-2.2.26-r10.ebuild 879 RMD160 cbd90bc7a4c775bf6e235e38a08348dfe2419941 SHA1 dae3f0cdad9306eb7ee435a2b95d96bb80c906e4 SHA256 d76c6ee327ccea3c17870de9dec93e27359a260bd9930728e831da6f0a752723
+EBUILD calculate-utilities-2.2.26-r11.ebuild 882 RMD160 9349bab8ca3ab2127bca963e7d722a5fd971d7c9 SHA1 bc3e25ffdd86e7f018e4978d87944735628355c9 SHA256 3313cd5c685400f4791e27fbe5ebe0a9166bbc9ef4f112386fa335446afc6076
 EBUILD calculate-utilities-2.2.26-r2.ebuild 867 RMD160 1a31f8e098b5ce84697e6b5f7a09b6dc15a53566 SHA1 53e38eff40a5390b5857f45dcb446fdd30c8c3ca SHA256 57b6c7a44a421e728f25ec5ded6bef7a643d7f5e05353f70e30754684f9e4cf8
 EBUILD calculate-utilities-2.2.26-r3.ebuild 867 RMD160 d2bccb369bec6373c99299b781b90d07fe511dcf SHA1 0df9bf0d67c0345e274a07e046190e21ce6ca9eb SHA256 2bda04eea42db866e7b10a1c3eaf52b0befb870fc97df841ddcd9d20f57b28cb
 EBUILD calculate-utilities-2.2.26-r4.ebuild 870 RMD160 6ef3d0fdbb10c458d376d82552c0bd4087ba780b SHA1 b73cde8c9cf313e11e84f875b865d9bfff634851 SHA256 f4efb1a5cbf040b73ec8329b3c69ad0c32424fc16afdac43ad819784612f75fa
@@ -28,4 +29,4 @@ EBUILD calculate-utilities-2.2.26-r9.ebuild 879 RMD160 cbd90bc7a4c775bf6e235e38a
 EBUILD calculate-utilities-2.2.26.ebuild 858 RMD160 689a2c02fbba4a04bc6103d21e1c28eea9c1b084 SHA1 ec3fdd0e02e7e24bf06286997cb41fdf861c034f SHA256 3e72263a6417c5bd713b5329d48fb0e2a26782a249c975ffc2bc3ddb1558e860
 EBUILD calculate-utilities-2.2.9999.ebuild 842 RMD160 f2c0fdc1068614b71a37f2226dcde4883ebd2876 SHA1 99f673a52934f552589baf6d12ed9bffc03b8ebd SHA256 56d97b7d2ce11d23b25d9036b4e2ee196b547ce1d11b0cc349a8205515b66bf1
 EBUILD calculate-utilities-3.0.9999.ebuild 441 RMD160 ec17f871ec70a322cff866048e50c150931e0e95 SHA1 d0e036ba01e6a71ad14e6f3e6735bbd0f325df99 SHA256 30c6cd4ce478016cb75458314ea4e745ccb1501be33f14c3a2593d9d0e670c9c
-MISC ChangeLog 35535 RMD160 f7e5c59bbbeb84b072998942c28955630a5a3e0e SHA1 fbcb9910572d837c77605138ca08132c298a04f6 SHA256 a633b0c12f0b6e2f75a0da97cd030ac87ee9b41c44a60589207b9536ade4429c
+MISC ChangeLog 35720 RMD160 82463472254c8cd004b175cd23d87883cd2523ba SHA1 d837246751f1307c9907bcd6cc60905b126a505c SHA256 07540b841af594b991b279a86cb224dcdeef2872fd448b1c993ed723a14a1bc4
