@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.26-r11 (08 Dec 2011)
+
+  08 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.26-r11.ebuild:
+  Update for calculate-client deps
+
 *calculate-utilities-2.2.26-r10 (07 Dec 2011)
 
   07 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
