@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-client-2.2.26-r1 (08 Dec 2011)
+
+  08 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-client-2.2.26-r1.ebuild, calculate-client-2.2.9999.ebuild:
+  Update deps
+
 *calculate-client-2.2.26 (16 Nov 2011)
 
   16 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
